# task_sale

./: .env.sample_docker  .env.sample_without_docker  .flake8  Dockerfile.yml  README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
contacts/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_alter_contact_email.py
products/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product_product_user.py
sales/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
sales/migrations/: 0001_initial.py
users/: models.py  tests.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
