[tool.poetry]
name = "task-sale"
version = "0.1.0"
description = "It is the project to sell electronics."
authors = ["Dmitrii, <dima12sik@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
djangorestframework = "^3.14.0"
pillow = "^10.1.0"
psycopg2-binary = "^2.9.9"
djoser = "^2.2.2"
redis = "^5.0.1"
pytils = "^0.4.1"
coverage = "^7.3.2"
celery = "^5.3.5"
eventlet = "^0.33.3"
flake8 = "^6.1.0"
django-filter = "^23.4"
python-dotenv = "^1.0.0"
drf-yasg = "^1.21.7"
djangorestframework-simplejwt = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
